--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -2,3 +2,23 @@ module(
     name = "monorepo",
     repo_name = "com_github_jrockway_monorepo",
 )
+
+bazel_dep(name = "gazelle", version = "0.40.0")
+bazel_dep(name = "rules_go", version = "0.50.1")
+
+bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
+
+go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
+go_sdk.nogo(nogo = "//:nogo")
+go_sdk.download(
+    name = "go_sdk",
+    version = "1.23.3",
+)
+use_repo(go_sdk, "go_sdk")
+
+go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
+go_deps.from_file(go_mod = "//:go.mod")
+use_repo(
+    go_deps,
+    "org_golang_x_tools",
+)
