--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -20,5 +20,17 @@ go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
+    "co_honnef_go_tools",
+    "com_github_alingse_asasalint",
+    "com_github_breml_bidichk",
+    "com_github_golangci_go_printf_func_name",
+    "com_github_golangci_gofmt",
+    "com_github_gordonklaus_ineffassign",
+    "com_github_kisielk_errcheck",
+    "com_github_nishanths_exhaustive",
+    "com_github_openpeedeep_depguard_v2",
+    "com_github_pkg_errors",
+    "com_github_tdakkota_asciicheck",
+    "com_github_tomarrell_wrapcheck_v2",
     "org_golang_x_tools",
 )
