--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -9,5 +9,5 @@ actions:
               - "*"
       steps:
           - run:
-                "bazel --config=remotecache test //...
-                //:style_tests  --remote_grpc_log=$BUILDBUDDY_ARTIFACTS_DIRECTORY/grpc.log"
+                "bazel test --config=remotecache
+                --remote_grpc_log=$BUILDBUDDY_ARTIFACTS_DIRECTORY/grpc.log //... //:style_tests"
