--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,5 @@
 build --workspace_status_command=$(pwd)/workspace_status.sh
+build --incompatible_strict_action_env=true
 
 build:remotecache --bes_results_url=https://app.buildbuddy.io/invocation/
 build:remotecache --bes_backend=grpcs://remote.buildbuddy.io
@@ -8,6 +9,9 @@ build:remotecache --experimental_remote_cache_compression --experimental_remote_
 build:remotecache --noslim_profile --experimental_profile_include_target_label --experimental_profile_include_primary_output
 build:remotecache --nolegacy_important_outputs
 build:remotecache --build_metadata=REPO_URL=https://github.com/jrockway/monorepo.git
+build:remote --define=EXECUTOR=remote
+build:remote --remote_executor=grpcs://remote.buildbuddy.io
+build:remote --remote_timeout=3600
 
 # local modifications should take priority
 try-import %workspace%/.bazelrc.local
