--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -9,5 +9,5 @@ actions:
               - "*"
       steps:
           - run:
-                "bazel test --config=remotecache
+                "bazel test --config=remotecache --config=remote --jobs=50
                 --remote_grpc_log=$BUILDBUDDY_ARTIFACTS_DIRECTORY/grpc.log //... //:style_tests"
