avoid running the buildifier test remotely

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -116,6 +116,7 @@ buildifier_test(
     no_sandbox = True,
     tags = [
         "manual",
+        "no-remote",
         "style",
     ],
     workspace = "//:MODULE.bazel",
