--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,10 @@ bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True
 # go
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.nogo(nogo = "//:nogo")
-go_sdk.download(name = "go_sdk", version = "1.23.3")
+go_sdk.download(
+    name = "go_sdk",
+    version = "1.23.3",
+)
 use_repo(go_sdk, "go_sdk")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
@@ -37,7 +40,10 @@ use_repo(
 
 # javascript
 node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
-node.toolchain(name = "nodejs", node_version_from_nvmrc = "//:.nvmrc")
+node.toolchain(
+    name = "nodejs",
+    node_version_from_nvmrc = "//:.nvmrc",
+)
 use_repo(node, "nodejs")
 
 pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
@@ -46,8 +52,8 @@ use_repo(pnpm, "pnpm")
 npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
 npm.npm_translate_lock(
     name = "npm",
+    npmrc = "//:.npmrc",
     pnpm_lock = "//:pnpm-lock.yaml",
     verify_node_modules_ignored = "//:.bazelignore",
-    npmrc = "//:.npmrc",
 )
 use_repo(npm, "npm")
