--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -156,3 +156,38 @@ alias(
     name = "pnpm",
     actual = "@pnpm//:pnpm",
 )
+
+# platforms
+config_setting(
+    name = "is_amd64_linux",
+    constraint_values = [
+        "@platforms//cpu:x86_64",
+        "@platforms//os:linux",
+    ],
+)
+
+platform(
+    name = "amd64_linux",
+    constraint_values = [
+        "@platforms//cpu:x86_64",
+        "@platforms//os:linux",
+    ],
+    visibility = ["//:__subpackages__"],
+)
+
+config_setting(
+    name = "is_arm64_linux",
+    constraint_values = [
+        "@platforms//cpu:aarch64",
+        "@platforms//os:linux",
+    ],
+)
+
+platform(
+    name = "arm64_linux",
+    constraint_values = [
+        "@platforms//cpu:aarch64",
+        "@platforms//os:linux",
+    ],
+    visibility = ["//:__subpackages__"],
+)
