--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -33,6 +33,7 @@ use_repo(
     "com_github_golangci_gofmt",
     "com_github_gordonklaus_ineffassign",
     "com_github_kisielk_errcheck",
+    "com_github_klauspost_compress",
     "com_github_nishanths_exhaustive",
     "com_github_openpeedeep_depguard_v2",
     "com_github_pkg_errors",
@@ -74,3 +75,7 @@ oci.pull(
     tag = "1.27.3",
 )
 use_repo(oci, "nginx", "nginx_linux_amd64", "nginx_linux_arm64_v8")
+
+# hugo
+hugo = use_extension("//tools/hugo:extensions.bzl", "hugo")
+use_repo(hugo, "hugo_amd64_linux", "hugo_arm64_linux", "hugo_macos")
