--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -51,7 +51,7 @@ nogo(
         "@org_golang_x_tools//go/analysis/passes/defers",
         "@org_golang_x_tools//go/analysis/passes/directive",
         "@org_golang_x_tools//go/analysis/passes/errorsas",
-        "@org_golang_x_tools//go/analysis/passes/fieldalignment",
+        # "@org_golang_x_tools//go/analysis/passes/fieldalignment",
         "@org_golang_x_tools//go/analysis/passes/findcall",
         "@org_golang_x_tools//go/analysis/passes/framepointer",
         "@org_golang_x_tools//go/analysis/passes/httpmux",
