--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -27,19 +27,35 @@ go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
     "co_honnef_go_tools",
+    "com_github_adrg_xdg",
     "com_github_alingse_asasalint",
     "com_github_breml_bidichk",
+    "com_github_fatih_color",
+    "com_github_felixge_httpsnoop",
+    "com_github_go_logr_zapr",
     "com_github_golangci_go_printf_func_name",
     "com_github_golangci_gofmt",
+    "com_github_google_go_cmp",
     "com_github_gordonklaus_ineffassign",
+    "com_github_jackc_pgx_v4",
     "com_github_kisielk_errcheck",
     "com_github_klauspost_compress",
     "com_github_nishanths_exhaustive",
     "com_github_openpeedeep_depguard_v2",
     "com_github_pkg_errors",
+    "com_github_satori_go_uuid",
+    "com_github_sirupsen_logrus",
     "com_github_tdakkota_asciicheck",
     "com_github_tomarrell_wrapcheck_v2",
+    "io_k8s_api",
+    "io_k8s_klog_v2",
+    "io_k8s_sigs_kind",
+    "org_golang_google_grpc",
+    "org_golang_google_protobuf",
+    "org_golang_x_exp",
     "org_golang_x_tools",
+    "org_uber_go_atomic",
+    "org_uber_go_zap",
 )
 
 # javascript
