--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
 bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
 bazel_dep(name = "aspect_rules_js", version = "2.1.1")
 bazel_dep(name = "gazelle", version = "0.40.0")
+bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")
 bazel_dep(name = "rules_go", version = "0.50.1")
 bazel_dep(name = "rules_nodejs", version = "6.3.2")
 bazel_dep(name = "rules_oci", version = "2.0.1")
@@ -95,3 +96,15 @@ use_repo(oci, "nginx", "nginx_linux_amd64", "nginx_linux_arm64_v8")
 # hugo
 hugo = use_extension("//tools/hugo:extensions.bzl", "hugo")
 use_repo(hugo, "hugo_amd64_linux", "hugo_arm64_linux", "hugo_macos")
+
+# cc toolchain
+toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
+use_repo(toolchains, "zig_sdk")
+
+register_toolchains(
+    "@zig_sdk//toolchain:linux_amd64_gnu.2.33",
+    "@zig_sdk//toolchain:linux_arm64_gnu.2.33",
+    "@zig_sdk//toolchain:windows_amd64",
+    "@zig_sdk//toolchain:x86_64-macos-none",
+    "@zig_sdk//toolchain:aarch64-macos-none",
+)
