bring jlog into this situation

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,9 +38,15 @@ use_repo(
     "com_github_golangci_gofmt",
     "com_github_google_go_cmp",
     "com_github_gordonklaus_ineffassign",
+    "com_github_itchyny_gojq",
     "com_github_jackc_pgx_v4",
+    "com_github_jessevdk_go_flags",
+    "com_github_joonix_log",
     "com_github_kisielk_errcheck",
     "com_github_klauspost_compress",
+    "com_github_logrusorgru_aurora_v3",
+    "com_github_mattn_go_colorable",
+    "com_github_mattn_go_isatty",
     "com_github_nishanths_exhaustive",
     "com_github_openpeedeep_depguard_v2",
     "com_github_pkg_errors",
@@ -51,6 +57,7 @@ use_repo(
     "io_k8s_api",
     "io_k8s_klog_v2",
     "io_k8s_sigs_kind",
+    "org_cloudfoundry_code_lager",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_exp",
