--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,10 +36,14 @@ use_repo(
     "com_github_fatih_color",
     "com_github_felixge_httpsnoop",
     "com_github_go_logr_zapr",
+    "com_github_golang_protobuf",
     "com_github_golangci_go_printf_func_name",
     "com_github_golangci_gofmt",
     "com_github_google_go_cmp",
     "com_github_gordonklaus_ineffassign",
+    "com_github_grpc_ecosystem_go_grpc_middleware",
+    "com_github_grpc_ecosystem_go_grpc_prometheus",
+    "com_github_grpc_ecosystem_grpc_opentracing",
     "com_github_itchyny_gojq",
     "com_github_jackc_pgx_v4",
     "com_github_jessevdk_go_flags",
@@ -51,11 +55,17 @@ use_repo(
     "com_github_mattn_go_isatty",
     "com_github_nishanths_exhaustive",
     "com_github_openpeedeep_depguard_v2",
+    "com_github_opentracing_contrib_go_stdlib",
+    "com_github_opentracing_opentracing_go",
     "com_github_pkg_errors",
+    "com_github_povilasv_prommod",
+    "com_github_prometheus_client_golang",
     "com_github_satori_go_uuid",
     "com_github_sirupsen_logrus",
     "com_github_tdakkota_asciicheck",
     "com_github_tomarrell_wrapcheck_v2",
+    "com_github_uber_jaeger_client_go",
+    "com_github_uber_jaeger_lib",
     "io_k8s_api",
     "io_k8s_klog_v2",
     "io_k8s_sigs_kind",
@@ -63,8 +73,10 @@ use_repo(
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_exp",
+    "org_golang_x_net",
     "org_golang_x_tools",
     "org_uber_go_atomic",
+    "org_uber_go_automaxprocs",
     "org_uber_go_zap",
 )
 
