--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,10 +9,10 @@ bazel_dep(name = "aspect_rules_js", version = "2.1.1")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "gazelle", version = "0.40.0")
 bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")
+bazel_dep(name = "platforms", version = "0.0.10")
 bazel_dep(name = "rules_go", version = "0.50.1")
 bazel_dep(name = "rules_nodejs", version = "6.3.2")
 bazel_dep(name = "rules_oci", version = "2.0.1")
-bazel_dep(name = "platforms", version = "0.0.10")
 
 bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
 
@@ -27,15 +27,35 @@ use_repo(go_sdk, "go_sdk")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
+go_deps.gazelle_override(
+    build_file_generation = "clean",
+    path = "github.com/cncf/xds/go",
+)
+go_deps.gazelle_override(
+    build_file_generation = "clean",
+    directives = [
+        "gazelle:proto disable_global",
+    ],
+    path = "cel.dev/expr",
+)
+go_deps.gazelle_override(
+    build_file_generation = "clean",
+    directives = [
+        "gazelle:proto disable_global",
+    ],
+    path = "github.com/envoyproxy/protoc-gen-validate",
+)
 use_repo(
     go_deps,
     "co_honnef_go_tools",
     "com_github_adrg_xdg",
     "com_github_alingse_asasalint",
     "com_github_breml_bidichk",
+    "com_github_envoyproxy_go_control_plane",
     "com_github_fatih_color",
     "com_github_felixge_httpsnoop",
     "com_github_go_logr_zapr",
+    "com_github_go_test_deep",
     "com_github_golang_protobuf",
     "com_github_golangci_go_printf_func_name",
     "com_github_golangci_gofmt",
@@ -53,6 +73,7 @@ use_repo(
     "com_github_logrusorgru_aurora_v3",
     "com_github_mattn_go_colorable",
     "com_github_mattn_go_isatty",
+    "com_github_miekg_dns",
     "com_github_nishanths_exhaustive",
     "com_github_openpeedeep_depguard_v2",
     "com_github_opentracing_contrib_go_stdlib",
@@ -67,9 +88,14 @@ use_repo(
     "com_github_uber_jaeger_client_go",
     "com_github_uber_jaeger_lib",
     "io_k8s_api",
+    "io_k8s_apimachinery",
+    "io_k8s_client_go",
+    "io_k8s_klog",
     "io_k8s_klog_v2",
     "io_k8s_sigs_kind",
+    "io_k8s_sigs_yaml",
     "org_cloudfoundry_code_lager",
+    "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_exp",
