ensure the ekglue binary is linked in shared mode even when cross-compiling

--- a/ekglue/cmd/ekglue/BUILD.bazel
+++ b/ekglue/cmd/ekglue/BUILD.bazel
@@ -22,6 +22,7 @@ go_library(
 go_binary(
     name = "ekglue",
     embed = [":ekglue_lib"],
+    pure = "off",
     visibility = ["//visibility:public"],
     x_defs = {
         "github.com/jrockway/monorepo/opinionated-server/server.AppVersion": "{EKGLUE_VERSION}",
