--- a/internal/oci/BUILD.bazel
+++ b/internal/oci/BUILD.bazel
@@ -1,4 +1,7 @@
-exports_files(
-    ["transition.bzl"],
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+
+bzl_library(
+    name = "transition",
+    srcs = ["transition.bzl"],
     visibility = ["//:__subpackages__"],
 )
