--- a/tools/hugo/BUILD.bazel
+++ b/tools/hugo/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
 
 native_binary(
@@ -9,4 +10,11 @@ native_binary(
     }),
     out = "hugo",
     visibility = ["//:__subpackages__"],
+)
+
+bzl_library(
+    name = "extensions",
+    srcs = ["extensions.bzl"],
+    visibility = ["//visibility:public"],
+    deps = ["@bazel_tools//tools/build_defs/repo:http.bzl"],
 )
