--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -52,9 +52,12 @@ use_repo(
     "com_github_adrg_xdg",
     "com_github_alingse_asasalint",
     "com_github_breml_bidichk",
+    "com_github_duo_labs_webauthn",
     "com_github_envoyproxy_go_control_plane",
     "com_github_fatih_color",
     "com_github_felixge_httpsnoop",
+    "com_github_fullstorydev_grpcui",
+    "com_github_fxamacker_cbor_v2",
     "com_github_go_logr_zapr",
     "com_github_go_test_deep",
     "com_github_golang_protobuf",
@@ -67,8 +70,12 @@ use_repo(
     "com_github_grpc_ecosystem_grpc_opentracing",
     "com_github_itchyny_gojq",
     "com_github_jackc_pgx_v4",
+    "com_github_jackc_tern",
     "com_github_jessevdk_go_flags",
+    "com_github_jmoiron_sqlx",
+    "com_github_joho_godotenv",
     "com_github_joonix_log",
+    "com_github_jrockway_opinionated_server",
     "com_github_kisielk_errcheck",
     "com_github_klauspost_compress",
     "com_github_logrusorgru_aurora_v3",
@@ -76,6 +83,8 @@ use_repo(
     "com_github_mattn_go_isatty",
     "com_github_miekg_dns",
     "com_github_nishanths_exhaustive",
+    "com_github_o1egl_paseto_v2",
+    "com_github_olekukonko_tablewriter",
     "com_github_openpeedeep_depguard_v2",
     "com_github_opentracing_contrib_go_stdlib",
     "com_github_opentracing_opentracing_go",
@@ -84,6 +93,9 @@ use_repo(
     "com_github_prometheus_client_golang",
     "com_github_satori_go_uuid",
     "com_github_sirupsen_logrus",
+    "com_github_spf13_cobra",
+    "com_github_spf13_pflag",
+    "com_github_spf13_viper",
     "com_github_tdakkota_asciicheck",
     "com_github_tomarrell_wrapcheck_v2",
     "com_github_uber_jaeger_client_go",
