--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -161,6 +161,11 @@ alias(
 
 # platforms
 config_setting(
+    name = "is_linux",
+    constraint_values = ["@platforms//os:linux"],
+)
+
+config_setting(
     name = "is_amd64_linux",
     constraint_values = [
         "@platforms//cpu:x86_64",
