--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -101,6 +101,7 @@ use_repo(
     "com_github_tomarrell_wrapcheck_v2",
     "com_github_uber_jaeger_client_go",
     "com_github_uber_jaeger_lib",
+    "com_github_zeebo_blake3",
     "io_k8s_api",
     "io_k8s_apimachinery",
     "io_k8s_client_go",
