use snapshot for postgres binaries

--- a/internal/apt/apt.yaml
+++ b/internal/apt/apt.yaml
@@ -6,7 +6,7 @@
 version: 1
 
 sources:
-    - channel: bookworm-pgdg-snapshot main
+    - channel: bookworm-pgdg main
       url: https://apt.postgresql.org/pub/repos/apt
     - channel: bookworm main
       url: https://snapshot-cloudflare.debian.org/archive/debian/20241212T204812Z
