--- a/tools/postgres/psql/BUILD.bazel
+++ b/tools/postgres/psql/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//internal/log",
+        "//internal/pctx",
         "//internal/testpostgres",
         "@org_uber_go_zap//:zap",
     ],
