--- a/jsso2/pkg/jtesting/BUILD.bazel
+++ b/jsso2/pkg/jtesting/BUILD.bazel
@@ -10,6 +10,8 @@ go_library(
         "backendDevEnvLocation": "$(rlocationpaths //jsso2:env.jsso2-backend.dev)",
     },
     deps = [
+        "//internal/pctx",
+        "//internal/testpostgres",
         "@com_github_grpc_ecosystem_go_grpc_middleware//logging/zap/ctxzap",
         "@com_github_jackc_pgx_v4//:pgx",
         "@com_github_jackc_pgx_v4//stdlib",
@@ -25,10 +27,6 @@ go_test(
     name = "jtesting_test",
     srcs = ["jtesting_test.go"],
     embed = [":jtesting"],
-    tags = [
-        "manual",
-        "postgres",
-    ],
     deps = [
         "@org_uber_go_zap//:zap",
         "@org_uber_go_zap//zapcore",
