fix ubuntu version (the docs were right); adjust remote execution to use debian

--- a/jsso2/pkg/jtesting/BUILD.bazel
+++ b/jsso2/pkg/jtesting/BUILD.bazel
@@ -25,6 +25,10 @@ go_test(
     name = "jtesting_test",
     srcs = ["jtesting_test.go"],
     embed = [":jtesting"],
+    tags = [
+        "manual",
+        "postgres",
+    ],
     deps = [
         "@org_uber_go_zap//:zap",
         "@org_uber_go_zap//zapcore",
