--- a/.bazelrc
+++ b/.bazelrc
@@ -21,6 +21,7 @@ build:remotecache --build_metadata=REPO_URL=https://github.com/jrockway/monorepo
 build:remote --define=EXECUTOR=remote
 build:remote --remote_executor=grpcs://remote.buildbuddy.io
 build:remote --remote_timeout=3600
+build:remote --host_platform=//:docker_image_platform
 
 common --enable_platform_specific_config
 build:linux --sandbox_add_mount_pair=/tmp
