--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -210,3 +210,17 @@ platform(
     name = "any",
     visibility = ["//:__subpackages__"],
 )
+
+platform(
+    name = "docker_image_platform",
+    constraint_values = [
+        "@platforms//cpu:x86_64",
+        "@platforms//os:linux",
+        "@bazel_tools//tools/cpp:clang",
+    ],
+    exec_properties = {
+        "OSFamily": "Linux",
+        "dockerNetwork": "on",  # esbuild needs it...
+        "container-image": "docker://docker.io/library/debian:12",
+    },
+)
