--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -53,6 +53,7 @@ use_repo(
     "co_honnef_go_tools",
     "com_github_adrg_xdg",
     "com_github_alingse_asasalint",
+    "com_github_bradleyfalzon_ghinstallation",
     "com_github_breml_bidichk",
     "com_github_duo_labs_webauthn",
     "com_github_envoyproxy_go_control_plane",
@@ -68,6 +69,7 @@ use_repo(
     "com_github_golangci_go_printf_func_name",
     "com_github_golangci_gofmt",
     "com_github_google_go_cmp",
+    "com_github_google_go_github_v32",
     "com_github_gordonklaus_ineffassign",
     "com_github_grpc_ecosystem_go_grpc_middleware",
     "com_github_grpc_ecosystem_go_grpc_prometheus",
@@ -112,6 +114,7 @@ use_repo(
     "io_k8s_klog",
     "io_k8s_klog_v2",
     "io_k8s_sigs_kind",
+    "io_k8s_sigs_kustomize_kyaml",
     "io_k8s_sigs_yaml",
     "io_periph_x_conn_v3",
     "io_periph_x_devices_v3",
@@ -123,6 +126,7 @@ use_repo(
     "org_golang_x_exp",
     "org_golang_x_image",
     "org_golang_x_net",
+    "org_golang_x_oauth2",
     "org_golang_x_tools",
     "org_uber_go_atomic",
     "org_uber_go_automaxprocs",
