upgrade bazel + rules_* + fix shell rules for //:any platform (?)

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -209,6 +209,9 @@ config_setting(
 platform(
     name = "any",
     visibility = ["//:__subpackages__"],
+    constraint_values = [
+        "@platforms//os:linux",
+    ],
 )
 
 platform(
