--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -3,20 +3,21 @@ module(
     repo_name = "com_github_jrockway_monorepo",
 )
 
-bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
+bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
 bazel_dep(name = "aspect_rules_esbuild", version = "0.21.0")
-bazel_dep(name = "aspect_rules_js", version = "2.1.1")
+bazel_dep(name = "aspect_rules_js", version = "2.2.0")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1")
-bazel_dep(name = "gazelle", version = "0.40.0")
-bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.1")
-bazel_dep(name = "platforms", version = "0.0.10")
-bazel_dep(name = "rules_distroless", version = "0.4.2")
+bazel_dep(name = "gazelle", version = "0.42.0")
+bazel_dep(name = "hermetic_cc_toolchain", version = "3.2.0")
+bazel_dep(name = "platforms", version = "0.0.11")
+bazel_dep(name = "rules_distroless", version = "0.5.1")
 bazel_dep(name = "rules_go", version = "0.53.0")
-bazel_dep(name = "rules_nodejs", version = "6.3.2")
-bazel_dep(name = "rules_oci", version = "2.0.1")
+bazel_dep(name = "rules_nodejs", version = "6.3.3")
+bazel_dep(name = "rules_oci", version = "2.2.2")
+bazel_dep(name = "rules_shell", version = "0.4.0")
 
-bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)
+bazel_dep(name = "buildifier_prebuilt", version = "8.0.1", dev_dependency = True)
 
 # go
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
@@ -180,7 +181,7 @@ use_repo(hugo, "hugo_amd64_linux", "hugo_arm64_linux", "hugo_macos")
 
 # cc toolchain
 toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
-use_repo(toolchains, "zig_sdk")
+use_repo(toolchains, "zig_sdk", "zig_sdk-linux-amd64", "zig_sdk-linux-arm64", "zig_sdk-macos-amd64", "zig_sdk-macos-arm64", "zig_sdk-windows-amd64")
 
 register_toolchains(
     "@zig_sdk//toolchain:linux_amd64_gnu.2.33",
