--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -56,12 +56,14 @@ use_repo(
     "com_github_breml_bidichk",
     "com_github_duo_labs_webauthn",
     "com_github_envoyproxy_go_control_plane",
+    "com_github_facebookincubator_ntp",
     "com_github_fatih_color",
     "com_github_felixge_httpsnoop",
     "com_github_fullstorydev_grpcui",
     "com_github_fxamacker_cbor_v2",
     "com_github_go_logr_zapr",
     "com_github_go_test_deep",
+    "com_github_goiot_devices",
     "com_github_golang_protobuf",
     "com_github_golangci_go_printf_func_name",
     "com_github_golangci_gofmt",
@@ -77,6 +79,7 @@ use_repo(
     "com_github_jmoiron_sqlx",
     "com_github_joho_godotenv",
     "com_github_joonix_log",
+    "com_github_jrockway_go_gpsd",
     "com_github_jrockway_opinionated_server",
     "com_github_kisielk_errcheck",
     "com_github_klauspost_compress",
@@ -110,11 +113,15 @@ use_repo(
     "io_k8s_klog_v2",
     "io_k8s_sigs_kind",
     "io_k8s_sigs_yaml",
+    "io_periph_x_conn_v3",
+    "io_periph_x_devices_v3",
+    "io_periph_x_host_v3",
     "org_cloudfoundry_code_lager",
     "org_golang_google_genproto_googleapis_rpc",
     "org_golang_google_grpc",
     "org_golang_google_protobuf",
     "org_golang_x_exp",
+    "org_golang_x_image",
     "org_golang_x_net",
     "org_golang_x_tools",
     "org_uber_go_atomic",
