convert matrix-clock to internal logging library

--- a/matrix-clock/BUILD.bazel
+++ b/matrix-clock/BUILD.bazel
@@ -16,6 +16,8 @@ go_library(
     importpath = "github.com/jrockway/monorepo/matrix-clock",
     visibility = ["//visibility:private"],
     deps = [
+        "//internal/log",
+        "//internal/pctx",
         "@com_github_facebookincubator_ntp//protocol/chrony",
         "@com_github_goiot_devices//dotstar",
         "@com_github_jrockway_go_gpsd//:go-gpsd",
@@ -30,6 +32,7 @@ go_library(
         "@org_golang_x_image//font/basicfont",
         "@org_golang_x_image//math/fixed",
         "@org_golang_x_net//trace",
+        "@org_uber_go_zap//:zap",
     ],
 )
 
